--- a/views/admin/create.handlebars
+++ b/views/admin/create.handlebars
@@ -10,10 +10,11 @@
     </div>
 
     <div class="form-group">
-      <label for="categoryId">Category</label>
-      <select class="form-control" id="categoryId" name="categoryId">
+      <label for="CategoryId">Category</label>
+      <select class="form-control" id="CategoryId" name="CategoryId">
         {{#each categories}}
-        <option value="{{this.id}}">{{this.name}}</option>
+        <option value="{{this.id}}" {{#ifSame this.id ../restaurant.CategoryId}}selected{{/ifSame}}>{{this.name}}
+        </option>
         {{/each}}
       </select>
     </div>
