feat: Add admin categories page

--- a/views/admin/users.handlebars
+++ b/views/admin/users.handlebars
@@ -4,6 +4,8 @@
   <big>
     <a href="/admin/restaurants">Restaurants</a>
     <span> | </span>
+    <a href="/admin/categories">Categories</a>
+    <span> | </span>
     <a href="/admin/users">Users</a>
   </big>
 </div>
