--- a/views/admin/categories.handlebars
+++ b/views/admin/categories.handlebars
@@ -10,9 +10,20 @@
   </big>
 </div>
 
-<a href='/admin/restaurants/create'>
-  <button type="button" class="btn btn-primary">New Restaurant</button>
-</a>
+<div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded shadow-sm">
+  {{#if category}}
+  <form action="/admin/categories/{{category.id}}?_method=PUT" method="POST" class="form-inline">
+    <input type="text" placeholder="name" name="name" value="{{category.name}}" class="form-control" required>
+    <button type="submit" class="btn btn-primary mx-2">Update</button>
+    <a href="/admin/categories">or Create New</a>
+  </form>
+  {{else}}
+  <form action="/admin/categories" method="POST" class="form-inline">
+    <input type="text" placeholder="name" name="name" class="form-control" required>
+    <button type="submit" class="btn btn-primary ml-2">Submit</button>
+  </form>
+  {{/if}}
+</div>
 
 <br />
 <br />
@@ -21,25 +32,18 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Category</th>
+      <th scope="col">Category Name</th>
       <th scope="col">#</th>
     </tr>
   </thead>
   <tbody>
-    {{#each restaurants}}
+    {{#each categories}}
     <tr>
       <th scope="row">{{this.id}}</th>
       <td>{{this.name}}</td>
-      <td>{{this.Category.name}}</td>
       <td>
         <button type="button" class="btn btn-link">
-          <a href="/admin/restaurants/{{this.id}}">
-            Show
-          </a>
-        </button>
-        <button type="button" class="btn btn-link">
-          <a href="/admin/restaurants/{{this.id}}/edit">
+          <a href="/admin/categories/{{this.id}}">
             Edit
           </a>
         </button>
@@ -53,17 +57,17 @@
 </table>
 
 <!-- Delete Modal -->
-{{#each restaurants}}
+{{#each categories}}
 <div class="modal fade" id="deleteModal-{{this.id}}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <big class="modal-body">
-        Are you sure to delete "<strong>{{this.name}}</strong>" ?
+        Do you want to delete "<strong>{{this.name}}</strong>" ?
       </big>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">cancel</button>
-        <form action="/admin/restaurants/{{this.id}}?_method=DELETE" method="POST">
+        <form action="/admin/categories/{{this.id}}?_method=DELETE" method="POST">
           <button type="submit" class="btn btn-danger">delete</button>
         </form>
       </div>
