--- a/views/restaurants.handlebars
+++ b/views/restaurants.handlebars
@@ -1,3 +1,16 @@
+<ul class="nav nav-pills">
+  <li class="nav-item">
+    <a class="nav-link {{#ifSame categoryId ''}}active{{/ifSame}}" href="?categoryId=">全部</a>
+  </li>
+  {{#each categories}}
+  <li class="nav-item">
+    <a class="nav-link {{#ifSame ../categoryId this.id}}active{{/ifSame}}"
+      href="?categoryId={{this.id}}">{{this.name}}</a>
+  </li>
+  {{/each}}
+</ul>
+<br />
+
 <div class="row">
   {{#each restaurants}}
   <div class="col-md-4">
