feat: Add viewCounts to restaurant in dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -25,7 +25,7 @@
       </tr>
       <tr>
         <th scope="row">Views</th>
-        <td>{{viewCounts}}</td>
+        <td>{{restaurant.viewCounts}}</td>
       </tr>
       <tr>
         <th scope="row">Favorites</th>
