--- a/views/restaurants.handlebars
+++ b/views/restaurants.handlebars
@@ -40,6 +40,13 @@
         <form action="/favorite/{{this.id}}" method="POST"><button type="submit" class="btn btn-primary">加到最愛</button>
         </form>
         {{/if}}
+        {{#if this.isLiked }}
+        <form action="/like/{{this.id}}?_method=DELETE" method="POST"><button type="submit"
+            class="btn btn-danger mt-1">Unlike</button></form>
+        {{else}}
+        <form action="/like/{{this.id}}" method="POST"><button type="submit" class="btn btn-primary mt-1">Like</button>
+        </form>
+        {{/if}}
       </div>
     </div>
   </div>
